--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@
 
     S.init();
   </script>
-  <script src="./js/firework.js" type="text/javascript"></script>
+  <script src="./js/index.js" type="text/javascript"></script>
 
 </body>
 
