--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
           S.UI.simulate(decodeURI(action).substring(i + 3));
         } else {
           // S.UI.simulate('|#countdown 3||新|年|快|乐|微微宝宝|这是|送你的烟花呀|2024 HAPPY NEW YEAR|LOVE YOU FOREVER');
-          S.UI.simulate('|#countdown 3||新|年|快|乐|微微宝宝|LOVE YOU|2024 新年快乐');
+          S.UI.simulate('|#countdown 3||新|年|快|乐|微微|LOVE YOU|2024 新年快乐');
         }
 
         S.Drawing.loop(function () {
